management/monitoring/imixs-prometheus/010-patch-volumes.yaml
###################################
# Patch prometheus volume configuration
###################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring

spec:
  template:
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data


###################################
# Patch Grafana volume configuration
###################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
