management/monitoring/imixs-prometheus/012-deployment-grafana.yaml
###################################
# ConfigMap Grafana
###################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest

        # run as root because of persistence volume storage
        securityContext:
          runAsUser: 0
          allowPrivilegeEscalation: false
        ports:
        - name: grafana
          containerPort: 3000
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests: 
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-data
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
            #readOnly: false
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: grafana-datasources
          configMap:
              defaultMode: 420
              name: grafana-datasources
