management/monitoring/imixs-prometheus/030-services.yaml
###################################
# Prometheus
###################################
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - protocol: TCP
    name: web
    port: 9090
  selector:
    app: prometheus


###################################
# Cadvisor
###################################
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
  - name: metrics
    port: 9100
    protocol: TCP
  selector:
    app: node-exporter

###################################
# Grafana
###################################
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  ports:
  - protocol: TCP
    name: web
    port: 3000
  selector:
    app: grafana
