management/monitoring/imixs-prometheus/060-ingress.yaml
###################################
# Ingress Grafana
###################################
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-tls
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - {YOUR-DOMAIN-NAME}
    secretName: tls-grafana
  rules:
  - host: {YOUR-DOMAIN-NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000





###################################
# Ingress Prometheus with baisc auth
# uncomment these lines to enable prmetheus internet access
###################################
#---
#kind: Ingress
#apiVersion: networking.k8s.io/v1
#metadata:
#  name: prometheus-ui
#  namespace: monitoring
#  annotations:
#    cert-manager.io/cluster-issuer: "letsencrypt-staging"
#spec:
#  tls:
#  - hosts:
#    - {YOUR-DOMAIN-NAME}
#    secretName: tls-prometheus
#  rules:
#  - host: {YOUR-DOMAIN-NAME}
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: prometheus
#            port:
#              number: 9090
